View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0022117 | Open CASCADE | OCCT:Modeling Algorithms | public | 2010-11-19 13:17 | 2012-03-29 17:26 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
OS | All | ||||
Product Version | 6.4.1 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0022117: Wrong calculation in gp_Dir::Mirror(const gp_Ax2&) | ||||
Description | The method gp_Dir::Mirror(const gp_Ax2&) gives wrong result. It should be corrected. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
2010-11-19 12:12
|
OCC22117.zip (1,366 bytes) |
|
Dear Julia, Please prepare branch for OCC22117.zip archive and make reviewing. |
|
SVN branch http://svn/svn/occt/branches/22117 is reviewed and ready for testing |
|
Dear BugMaster, Workbench KAS:dev:mkv-22117-occt was created from SVN branch http://svn/svn/occt/branches/22117 (and mkv-22117-products from trunk) and compiled on Linux platform. There are not regressions in mkv-22117-products regarding to KAS:dev:products-652-opt. See results in /dn45/occttests/results/KAS/dev/mkv-22117-products_03102011/lin See reference results in /dn45/occttests/results/KAS/dev/products-652-opt_23092011/lin See test cases in /dn45/occttests/tests/ED N.B. In order to launch testing case you can make use the following instructions http://doc/doku.php?id=occt:certification |
|
Dear Maria (mka), Could you please send me wrong result of the method gp_Dir::Mirror. |
|
Before fixing the bug in the gp_Dir::Mirror(const gp_Ax2&) method it gives incorrect result. For example: Let's vector = (1 0 1), plane = (0 0 1) - incorrect result was (-1 0 -1) (this result could be true if mirror is relatively the point not the PLANE); - correct result is (1 0 -1) as it calculates now. |
|
Integrated into trunk of occt repository Date: 2011-12-08 15:46:41 +0400 (Thu, 08 Dec 2011) New Revision: 9684 Modified: trunk/src/gp/gp_Dir.cxx |
Date Modified | Username | Field | Change |
---|---|---|---|
2011-08-02 11:23 | bugmaster | Category | OCCT:FDC => OCCT:Foundation Classes |
2011-09-13 14:47 | bugmaster | Category | OCCT:Foundation Classes => OCCT:Modeling Algorithms |
2011-09-13 14:47 | bugmaster | Fixed in Version | EMPTY => |
2011-09-13 14:49 | bugmaster | Note Added: 0018127 | |
2011-09-13 14:49 | bugmaster | Assigned To | bugmaster => jgv |
2011-09-13 14:49 | bugmaster | Status | new => assigned |
2011-09-30 17:33 |
|
Note Added: 0018303 | |
2011-09-30 17:33 |
|
Status | assigned => reviewed |
2011-10-04 17:08 |
|
Note Added: 0018316 | |
2011-10-04 17:08 |
|
Note Added: 0018317 | |
2011-10-04 17:09 |
|
Assigned To | jgv => mka |
2011-10-04 17:09 |
|
Status | reviewed => assigned |
2011-10-06 17:24 |
|
Note Added: 0018332 | |
2011-10-06 17:25 |
|
Assigned To | mka => mkv |
2011-12-07 06:19 |
|
Relationship added | has duplicate 0022558 |
2011-12-07 06:21 |
|
Status | assigned => resolved |
2011-12-07 06:21 |
|
Product Version | => 6.4.1 |
2011-12-07 06:21 |
|
Target Version | => 6.5.3 |
2011-12-07 06:22 |
|
Status | resolved => reviewed |
2011-12-07 06:22 |
|
Status | reviewed => tested |
2011-12-08 15:47 | bugmaster | Note Added: 0018787 | |
2011-12-08 15:47 | bugmaster | Status | tested => verified |
2011-12-08 15:47 | bugmaster | Resolution | open => fixed |
2011-12-08 15:48 | bugmaster | Note Edited: 0018787 | |
2012-03-29 17:26 | bugmaster | Changeset attached | => occt master 7637f2b3 |