0022117: Wrong calculation in gp_Dir::Mirror(const gp_Ax2&)